[tool.poetry]
name = "habid"
version = "0.4.0"
description = "Flashcards with levenshtein distance"
authors = ["Streampunk <glad.car1474@fastmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.6"
toml = "^0.10.2"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.7.4"
python-lsp-black = "^1.3.0"
python-lsp-isort = "^0.1"
flake8 = "^6.0.0"
pdbpp = "^0.10.3"

[tool.poetry.scripts]
habid = 'habid:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
